; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/commands/extr_opclasscmds.c_IsThereOpFamilyInNamespace.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/commands/extr_opclasscmds.c_IsThereOpFamilyInNamespace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OPFAMILYAMNAMENSP = common dso_local global i32 0, align 4
@ERROR = common dso_local global i32 0, align 4
@ERRCODE_DUPLICATE_OBJECT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [74 x i8] c"operator family \22%s\22 for access method \22%s\22 already exists in schema \22%s\22\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @IsThereOpFamilyInNamespace(i8* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* @OPFAMILYAMNAMENSP, align 4
  %8 = load i32, i32* %5, align 4
  %9 = call i32 @ObjectIdGetDatum(i32 %8)
  %10 = load i8*, i8** %4, align 8
  %11 = call i32 @CStringGetDatum(i8* %10)
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @ObjectIdGetDatum(i32 %12)
  %14 = call i64 @SearchSysCacheExists3(i32 %7, i32 %9, i32 %11, i32 %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %27

16:                                               ; preds = %3
  %17 = load i32, i32* @ERROR, align 4
  %18 = load i32, i32* @ERRCODE_DUPLICATE_OBJECT, align 4
  %19 = call i32 @errcode(i32 %18)
  %20 = load i8*, i8** %4, align 8
  %21 = load i32, i32* %5, align 4
  %22 = call i32 @get_am_name(i32 %21)
  %23 = load i32, i32* %6, align 4
  %24 = call i32 @get_namespace_name(i32 %23)
  %25 = call i32 @errmsg(i8* getelementptr inbounds ([74 x i8], [74 x i8]* @.str, i64 0, i64 0), i8* %20, i32 %22, i32 %24)
  %26 = call i32 @ereport(i32 %17, i32 %25)
  br label %27

27:                                               ; preds = %16, %3
  ret void
}

declare dso_local i64 @SearchSysCacheExists3(i32, i32, i32, i32) #1

declare dso_local i32 @ObjectIdGetDatum(i32) #1

declare dso_local i32 @CStringGetDatum(i8*) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @errmsg(i8*, i8*, i32, i32) #1

declare dso_local i32 @get_am_name(i32) #1

declare dso_local i32 @get_namespace_name(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
